--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YHez_4th_JS_DZ</title>
   </head>
-  <body style="background-color: rgb(63, 45, 223);">
-    <h1>YHez_4th_JS_DZ</h1>
-    <p>Hello World</p>
-    <script type="module" src="./js/task-1.js"></script>
-    <script type="module" src="./js/task-2.js"></script>
-    <script type="module" src="./js/task-3.js"></script>
+  <body>
+    <ul class="gallery">
+      <li class="gallery-item">
+        <a 
+        class="gallery-link" 
+        href="large-image.jpg">
+          <img
+            class="gallery-image"
+            src="small-image.jpg"
+            data-source="large-image.jpg"
+            alt="Image description"
+          />
+        </a>
+      </li>
+      
+    </ul>
+
+
+    <script src="./js/gallery.js"></script>
   </body>
 </html>
